# Extracto

./: .gitignore  Dockerfile  README.md  extracto_app.py  pyproject.toml  requirements-web.txt  requirements.txt
demo_samples/: manifest.json
demo_samples/cms1500/: cms1500_001.json  cms1500_002.json  cms1500_003.json  cms1500_004.json  cms1500_005.json  cms1500_006.json  cms1500_007.json  cms1500_008.json  cms1500_009.json  cms1500_010.json  cms1500_011.json  cms1500_012.json  cms1500_013.json  cms1500_014.json  cms1500_015.json  cms1500_016.json  cms1500_017.json  cms1500_018.json  cms1500_019.json  cms1500_020.json  cms1500_021.json  cms1500_022.json  cms1500_023.json  cms1500_024.json  cms1500_025.json  cms1500_026.json  cms1500_027.json  cms1500_028.json  cms1500_029.json  cms1500_030.json  cms1500_031.json  cms1500_032.json  cms1500_033.json  cms1500_034.json  cms1500_035.json  cms1500_036.json  cms1500_037.json  cms1500_038.json  cms1500_039.json  cms1500_040.json  (+81 more)
demo_samples/eob/: eob_001.json  eob_002.json  eob_003.json  eob_004.json  eob_005.json  (+116 more)
extracto/: __init__.py  cli.py
schemas/: extraction_output.schema.json
scripts/: bundle_mixed_pdf.py  demo.py  generate_benchmark_docs.py  generate_cms1500.py  generate_demo_samples.py  generate_eob.py  generate_froi.py  generate_full_packets.py  generate_hipaa.py  generate_medical_records.py  generate_mixed_bundle.py  generate_phq9.py  generate_scanned_forms.py  generate_unknown_forms.py
tests/: test_classifier.py  test_detection.py  test_generic.py  test_indexer.py  test_metrics.py  test_structuring.py
(+601 files in other folders)
